Fixed & Transparent NavBar

--- a/views/main.html
+++ b/views/main.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- NAVBAR -->
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top bg-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
