--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,9 @@
+/*NAVBAR*/
+.bg-nav{
+	background-color: hsla(46, 100%, 54%, 0.2);
+	border-color: #FEC616;
+}
+
 .logo{
 	content: url("../images/society.png");
 	width: 45px;
