--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,14 @@
 /*NAVBAR*/
 .bg-nav{
-	background-color: hsla(46, 100%, 54%, 0.2);
-	border-color: #FEC616;
+	background-color: $trans;
+	border-color: $trans;
+	padding: 10px 35px 0px 35px;
 }
 
 .logo{
-	content: url("../images/society.png");
-	width: 45px;
-    margin: 2px;
+	content: url("../images/society1.png");
+	width: 40px;
+    margin: 5px 15px 0px 5px;
 }
 
 .logged-in{
