--- a/views/main.html
+++ b/views/main.html
@@ -32,17 +32,20 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <!-- Add condition "if(user)" so that only a user/admin can view it --> 
+                            <li><a href="#">Gallery</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li class="dropdown">
-                          <a href="#" class="dropdown-toggle  logged-in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="#">Tim Brown</a></li>
-                            <li><a href="#">Profile</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Logout</a></li>
-                          </ul>
-                        </li>
+                        <li><a class="btn btn-default nav-btn" href="#" role="button">Login</a></li>
+                        <!-- if(user) -->
+                            <li class="dropdown">
+                              <a href="#" class="dropdown-toggle  logged-in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
+                              <ul class="dropdown-menu">
+                                <li><a href="#">Tim Brown</a></li>
+                                <li><a href="#">Profile</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Logout</a></li>
+                              </ul>
+                            </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
