Added Welcome container

--- a/views/main.html
+++ b/views/main.html
@@ -52,6 +52,14 @@
         </nav>
         <!-- End of NAVBAR -->
 
+        <!-- WELCOME -->
+        <div class="container-fluid welcome-bg">
+            <div class="row">
+                
+            </div>            
+        </div>
+        <!-- End of WELCOME -->
+
         
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script type="text/javascript" src='../vendor/bootstrap-3.3.5-dist/js/jquery-2.1.4.js'></script>
