--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 /*variables*/
-$trans:transparent;
+$trans: transparent;
+$highlight: white; 
+$tinge: #FF8F26; //orang-yellow
 
 @import 'header';
 @import 'welcome';
