--- a/views/main.html
+++ b/views/main.html
@@ -35,7 +35,8 @@
                         <!-- Add condition "if(user)" so that only a user/admin can view it --> 
                             <li><a href="#">Gallery</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a class="btn btn-default nav-btn" href="#" role="button">Login</a></li>
+                        <!-- if(!user) -->
+                            <li><a class="btn btn-default nav-btn" href="#" role="button">Login</a></li>
                         <!-- if(user) -->
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle  logged-in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
@@ -53,10 +54,16 @@
         <!-- End of NAVBAR -->
 
         <!-- WELCOME -->
-        <div class="container-fluid welcome-bg">
+        <div class="container-fluid welcome-bg text-center">
             <div class="row">
-                
-            </div>            
+                <h1>SOCIETY</h1>
+                <p>S.V. Road, Borivli (W)</p>
+            </div>
+
+            <div class="row">
+                <a class="btn btn-default btn1" href="#" role="button">Login</a>
+                <a class="btn btn-default btn2" href="#" role="button">Signup</a>
+            </div>
         </div>
         <!-- End of WELCOME -->
 
