--- a/views/main.html
+++ b/views/main.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <!-- NAVBAR -->
-        <nav class="navbar navbar-default navbar-fixed-top bg-nav">
+        <nav class="navbar navbar-default navbar-fixed-top bg-nav nav-txt">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
