--- a/views/main.html
+++ b/views/main.html
@@ -40,7 +40,7 @@
                         <!-- if(user) -->
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle  logged-in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
-                              <ul class="dropdown-menu">
+                              <ul class="dropdown-menu nav-dropdown">
                                 <li><a href="#">Tim Brown</a></li>
                                 <li><a href="#">Profile</a></li>
                                 <li role="separator" class="divider"></li>
