Added basic CONTACT

--- a/views/main.html
+++ b/views/main.html
@@ -67,10 +67,21 @@
         </div>
         <!-- End of WELCOME -->
 
+        <!-- CONTACT -->
+        <div class="container">
+            <form>      
+              <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+              <input name="email" type="email" class="feedback-input" placeholder="Email" />
+              <input name="number" type="number" class="feedback-input" placeholder="Number" />
+              <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+              <input type="submit" value="SUBMIT"/>
+            </form>
+        </div>
+        <!-- End of CONTACT -->
+
         
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script type="text/javascript" src='../vendor/bootstrap-3.3.5-dist/js/jquery-2.1.4.js'></script>
-        
         <script type="text/javascript" src='../vendor/bootstrap-3.3.5-dist/js/bootstrap.min.js'></script>
     </body>
 </html>
