Welcome errors and missing syntax fixed

--- a/scss/_welcome.scss
+++ b/scss/_welcome.scss
@@ -5,10 +5,17 @@
     width: 100%;
     color: $highlight;
 
+    .row1{
+    	margin-top: 15%;
+    }
+
+    .row2{
+    	margin-bottom: 25%;
+    }
+
 	h1{
 	    font-size: 47px;
-	    font-weight: bold;
-        margin-top: 13%;		
+	    font-weight: bold;		
 	}
 
 	p{
