--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,8 @@
 $trans: transparent;
 $highlight: white; 
 $tinge: #FF8F26; //orang-yellow
+$dark-bg: #1E2B38; //deep blue
 
 @import 'header';
 @import 'welcome';
-
+@import 'contact';
