Added Contact title, rows & cols

--- a/scss/_welcome.scss
+++ b/scss/_welcome.scss
@@ -3,7 +3,7 @@
 	background: url("../images/welcome.jpg");
 	height: 100%;
     width: 100%;
-    color: $highlight;
+    color: $text;
 
     .row1{
     	margin-top: 15%;
@@ -27,7 +27,7 @@
 		    border-width: 2px;
 		    padding: 6px 20px !important;
 		    margin: 10px 5px;
-		    color: $highlight;
+		    color: $text;
 		}
 
 		.btn2{
@@ -36,7 +36,7 @@
 		    border-width: 2px;
 		    padding: 6px 20px !important;
 		    margin: 10px 5px;
-		    color: $highlight;
+		    color: $text;
 		}
 
 }
