--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,12 @@
 /*variables*/
 $trans: transparent;
-$highlight: white; 
+$text: white; 
 $tinge: #FF8F26; //orang-yellow
 $dark-bg: #1E2B38; //deep blue
 
+/*fonts*/
+
+/*partial scss*/
 @import 'header';
 @import 'welcome';
 @import 'contact';
