--- a/views/main.html
+++ b/views/main.html
@@ -69,14 +69,26 @@
         <!-- End of WELCOME -->
 
         <!-- CONTACT -->
-        <div class="container" id="contact">
-            <form>      
-              <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-              <input name="email" type="email" class="feedback-input" placeholder="Email" />
-              <input name="number" type="number" class="feedback-input" placeholder="Number" />
-              <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-              <input type="submit" value="SUBMIT"/>
-            </form>
+        <div class="container-fluid" id="contact">
+            <div class="row row1">
+                <h2 class="text-right">CONTACT</h2>
+            </div>
+            <div class="row row2">
+                <div class="col-md-4 col-xs-12">
+                </div>
+                <form> 
+                    <div class="col-md-4 col-xs-12">
+                        <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+                        <input name="email" type="email" class="feedback-input" placeholder="Email" />
+                        <input name="number" type="number" class="feedback-input" placeholder="Number" />
+                    </div>
+                    <div class="col-md-4 col-xs-12">
+                        <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+                    </div>
+            <div class="row row2">
+                    <input type="submit" value="SUBMIT"/>
+                </form>
+            </div>
         </div>
         <!-- End of CONTACT -->
 
