--- a/views/main.html
+++ b/views/main.html
@@ -74,19 +74,35 @@
                 <h2 class="text-right">CONTACT</h2>
             </div>
             <div class="row row2">
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-5 col-xs-12">
                 </div>
-                <form> 
-                    <div class="col-md-4 col-xs-12">
-                        <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-                        <input name="email" type="email" class="feedback-input" placeholder="Email" />
-                        <input name="number" type="number" class="feedback-input" placeholder="Number" />
-                    </div>
-                    <div class="col-md-4 col-xs-12">
-                        <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-                    </div>
-            <div class="row row2">
-                    <input type="submit" value="SUBMIT"/>
+
+                <form>
+                    <div class="col-md-7 col-xs-12">
+                        <div class="row">
+                            <div class="col-md-6 col-xs-12">
+                                <div class="form-group">
+                                    <input name="name" type="text" class="form-control" placeholder="Name" /> 
+                                </div>
+                                <div class="form-group">  
+                                    <input name="email" type="email" class="form-control" placeholder="Email" />
+                                </div>
+                                <div class="form-group">
+                                    <input name="number" type="number" class="form-control" placeholder="Number" />
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-xs-12">
+                                <div class="form-group">
+                                    <textarea name="text" rows="6" class="form-control" placeholder="Comment"></textarea>
+                                </div>  
+                            </div>
+                        </div>
+                        <div class="row row-submit">
+                            <div class="form-group">
+                                <input type="submit" class="form-control pull-right" value="SUBMIT"/>
+                            </div>
+                        </div>
+                    </div>    
                 </form>
             </div>
         </div>
