--- a/views/main.html
+++ b/views/main.html
@@ -74,11 +74,22 @@
                 <h2 class="text-right">CONTACT</h2>
             </div>
             <div class="row row2">
-                <div class="col-md-5 col-xs-12">
+                <div class="col-md-4 col-xs-12 text-right">
+                    <p>
+                        <strong>XYZ Society</strong><br>
+                        S.V. Road<br>
+                        Borivli (W)
+                    </p>
+                    <p>
+                        Tel: 022-28759400
+                    </p>
+                    <p>
+                        <a href="mailto:contact@xyzsociety.com">contact@xyzsociety.com</a>
+                    </p>
                 </div>
 
                 <form>
-                    <div class="col-md-7 col-xs-12">
+                    <div class="col-md-8 col-xs-12">
                         <div class="row">
                             <div class="col-md-6 col-xs-12">
                                 <div class="form-group">
@@ -91,7 +102,7 @@
                                     <input name="number" type="number" class="form-control" placeholder="Number" />
                                 </div>
                             </div>
-                            <div class="col-md-6 col-xs-12">
+                            <div class="col-md-5 col-xs-12">
                                 <div class="form-group">
                                     <textarea name="text" rows="6" class="form-control" placeholder="Comment"></textarea>
                                 </div>  
