Adder Footer bg

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,7 @@
-/*Contact form on manin pg*/
+/*Contact form on main pg*/
 #contact{
 	background-color: $dark-bg;
+	padding-bottom: 50px;
 
 	input, textarea{
 		background-color: $trans;
