--- a/views/main.html
+++ b/views/main.html
@@ -68,6 +68,9 @@
         </div>
         <!-- End of WELCOME -->
 
+        <!-- SALE/RENT -->
+        <!-- End of SALE/RENT -->
+
         <!-- CONTACT -->
         <div class="container-fluid" id="contact">
             <div class="row row1">
@@ -118,6 +121,13 @@
             </div>
         </div>
         <!-- End of CONTACT -->
+
+
+        <!-- FOOTER -->
+        <div class="container-fluid footer-bg">
+            
+        </div>
+        <!-- End of FOOTER -->
 
         
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
