--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@ $trans: transparent;
 $text: white; 
 $tinge: #FF8F26; //orang-yellow
 $dark-bg: #1E2B38; //deep blue
+$veil: rgba(0, 0, 0, 0.75); //translucent black layer
 
 /*fonts*/
 
