--- a/views/main.html
+++ b/views/main.html
@@ -125,7 +125,11 @@
 
         <!-- FOOTER -->
         <div class="container-fluid footer-bg">
-            
+            <div class="row text-center">
+                <footer>
+                    <h5>© 2015 Team | Company</h5>
+                </footer>
+            </div>
         </div>
         <!-- End of FOOTER -->
 
