Added Rent-Sale bg

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,6 @@ $veil: rgba(0, 0, 0, 0.75); //translucent black layer
 /*partial scss*/
 @import 'header';
 @import 'welcome';
+@import 'rent-sale';
 @import 'contact';
 @import 'footer';
