--- a/views/main.html
+++ b/views/main.html
@@ -68,8 +68,11 @@
         </div>
         <!-- End of WELCOME -->
 
-        <!-- SALE/RENT -->
-        <!-- End of SALE/RENT -->
+        <!-- RENT-SALE -->
+        <div class="container-fluid" id="rent-sale">
+            
+        </div>
+        <!-- End of RENT-SALE -->
 
         <!-- CONTACT -->
         <div class="container-fluid" id="contact">
@@ -121,7 +124,6 @@
             </div>
         </div>
         <!-- End of CONTACT -->
-
 
         <!-- FOOTER -->
         <div class="container-fluid footer-bg">
