Added Rent-Sale panels & images

--- a/scss/_rent-sale.scss
+++ b/scss/_rent-sale.scss
@@ -2,4 +2,9 @@
 	background: url("../images/rent_sale.jpg") fixed;
 	height: 300px;
 	padding: 0%;
+
+	.row{
+		background-color: $veil-o;
+		height: 300px;
+	}
 }
