--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@ $text: white;
 $tinge: #FF8F26; //orang-yellow
 $dark-bg: #1E2B38; //deep blue
 $veil: rgba(0, 0, 0, 0.75); //translucent black layer
+$veil-o: rgba(255, 143, 38, 0.65); //translucent orange layer
 
 /*fonts*/
 
