--- a/views/main.html
+++ b/views/main.html
@@ -70,7 +70,23 @@
 
         <!-- RENT-SALE -->
         <div class="container-fluid" id="rent-sale">
-            
+            <div class="row text-center">
+                <div class="col-md-4 col-md-offset-1">
+                   <div class="panel panel-default">
+                     <div class="panel-body">
+                       RENT
+                     </div>
+                   </div> 
+                </div>
+
+                <div class="col-md-4 col-md-offset-2">
+                   <div class="panel panel-default">
+                     <div class="panel-body">
+                       SALE
+                     </div>
+                   </div> 
+                </div>
+            </div>
         </div>
         <!-- End of RENT-SALE -->
 
