--- a/views/main.html
+++ b/views/main.html
@@ -70,22 +70,44 @@
 
         <!-- RENT-SALE -->
         <div class="container-fluid" id="rent-sale">
-            <div class="row text-center">
-                <div class="col-md-4 col-md-offset-1">
-                   <div class="panel panel-default">
-                     <div class="panel-body">
-                       RENT
-                     </div>
-                   </div> 
-                </div>
+            <div class="row row_rs text-center">
+                <section>
+                    <div class="col-md-4 col-md-offset-1">
+                       <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="col-md-4">
+                                    <img src="../images/rent.png">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="row">
+                                        RENT
+                                    </div> 
+                                    <div class="row">
+                                        8 flats
+                                    </div>
+                                </div>
+                            </div>
+                       </div> 
+                    </div>
 
-                <div class="col-md-4 col-md-offset-2">
-                   <div class="panel panel-default">
-                     <div class="panel-body">
-                       SALE
-                     </div>
-                   </div> 
-                </div>
+                    <div class="col-md-4 col-md-offset-1">
+                       <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="col-md-4">
+                                    <img src="../images/sale.png">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="row">
+                                        SALE
+                                    </div> 
+                                    <div class="row">
+                                        2 flats
+                                    </div>
+                                </div>
+                            </div>
+                       </div> 
+                    </div>
+                </section>
             </div>
         </div>
         <!-- End of RENT-SALE -->
