--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,9 @@
 /*variables*/
 $trans: transparent;
 $text: white; 
-$tinge: #FF8F26; //orang-yellow
-$dark-bg: #1E2B38; //deep blue
+$tinge: #F8B319; //deep-yellow
+$dark-bg: rgb(44, 62, 80); //deep blue
+$brown-block: rgb(140, 98, 59); //brown
 $veil: rgba(0, 0, 0, 0.75); //translucent black layer
 $veil-o: rgba(255, 143, 38, 0.65); //translucent orange layer
 
