--- a/views/main.html
+++ b/views/main.html
@@ -79,30 +79,22 @@
                                     <img src="../images/rent.png">
                                 </div>
                                 <div class="col-md-8">
-                                    <div class="row">
-                                        RENT
-                                    </div> 
-                                    <div class="row">
-                                        8 flats
-                                    </div>
+                                    <h1>5</h1>
+                                    <h3>flats</h3>
                                 </div>
                             </div>
                        </div> 
                     </div>
 
-                    <div class="col-md-4 col-md-offset-1">
+                    <div class="col-md-4 col-md-offset-2">
                        <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="col-md-4">
                                     <img src="../images/sale.png">
                                 </div>
                                 <div class="col-md-8">
-                                    <div class="row">
-                                        SALE
-                                    </div> 
-                                    <div class="row">
-                                        2 flats
-                                    </div>
+                                    <h1>2</h1>
+                                    <h3>flats</h3>
                                 </div>
                             </div>
                        </div> 
