--- a/views/main.html
+++ b/views/main.html
@@ -37,7 +37,8 @@
                             <li><a href="#">Gallery</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <!-- if(!user) -->
-                            <li><a class="btn btn-default nav-btn" href="#" role="button">Login</a></li>
+                            <!-- button activates Login modal -->
+                            <li><a class="btn btn-default nav-btn" data-toggle="modal" data-target="#myModal" role="button">Login</a></li>
                         <!-- if(user) -->
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle  logged-in" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
