Set SignIn Modal bg

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ $veil-o: rgba(255, 143, 38, 0.65); //translucent orange layer
 
 /*partial scss*/
 @import 'header';
+@import 'signin-modal';
 @import 'welcome';
 @import 'rent-sale';
 @import 'contact';
