--- a/views/main.html
+++ b/views/main.html
@@ -55,6 +55,37 @@
         </nav>
         <!-- End of NAVBAR -->
 
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content signin-bg">
+                    <div class="modal-body">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                        .<br>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- WELCOME -->
         <div class="container-fluid welcome-bg text-center">
             <div class="row row1">
