--- a/views/main.html
+++ b/views/main.html
@@ -63,24 +63,27 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
-                        .<br>
+                        <form class="login">
+                            <fieldset>
+                                <legend class="legend">Login</legend>
+                                <div class="input">
+                                    <input type="email" placeholder="Email" required />
+                                    <span><i class="fa fa-envelope-o"></i></span>
+                                </div>
+                                
+                                <div class="input">
+                                    <input type="password" placeholder="Password" required />
+                                    <span><i class="fa fa-lock"></i></span>
+                                </div>
+                                <button type="submit" class="submit"><i class="fa fa-long-arrow-right"></i></button>
+                            </fieldset>
+                          
+                            <div class="feedback">
+                                login successful <br>
+                                redirecting...
+                            </div>
+                          
+                        </form>
                     </div>
                 </div>
             </div>
@@ -201,5 +204,6 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script type="text/javascript" src='../vendor/bootstrap-3.3.5-dist/js/jquery-2.1.4.js'></script>
         <script type="text/javascript" src='../vendor/bootstrap-3.3.5-dist/js/bootstrap.min.js'></script>
+        <script src="../js/signin.js"></script>
     </body>
 </html>
